# ProofOfAction

./: .env  .gitignore  README.md  analyze.py  pyproject.toml  requirements.txt  vercel.json
api/: analyze.py
docs/: SECURITY.md
frontend/: index.html
src/: main.py  vercel.json
src/analyzer/: authenticity.py  metadata_generator.py  multimodal_llm.py
src/api/: auth.py  gamma_client.py
src/blockchain/: onchain_settle.py
src/integrations/kick/: __init__.py  bot.py  oauth.py  webhooks.py
