[project]
name = "proofofaction"
version = "0.1.0"
description = "A FastAPI project for Proof of Action"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0",
    "web3>=6.19.0",
    "eth-account>=0.11.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "opencv-python-headless>=4.9.0",
    "google-generativeai>=0.4.0",
    "python-multipart>=0.0.9",
    "python-ffmpeg>=2.0.4",
    "pillow>=10.2.0",
    "slowapi>=0.2.8",
    "msgpack>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
